small correction mobile menu

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,47 +2,44 @@ body {
   background-color: rgb(82, 80, 80);
 }
 
-
-
 #header__black-banniere {
-    color: white;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  color: white;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #header__black-banniere p {
-    margin: 0.7rem;
-    display: flex;
-    align-items: center;
+  margin: 0.7rem;
+  display: flex;
+  align-items: center;
 }
 #header__black-banniere p img {
-    height: 1.5rem;
-    padding-right: 1rem;
+  height: 1.5rem;
+  padding-right: 1rem;
 }
 
 .global-margin,
 hr {
-    width: 85%;
-    margin-left: 10%;
-    margin-right: 5%;
-    background-color: white;
+  width: 85%;
+  margin-left: 10%;
+  margin-right: 5%;
+  background-color: white;
 }
 #header-ligne-navigation {
-    display: flex;
-    margin-bottom: 2rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    align-items: center;
+  display: flex;
+  margin-bottom: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  align-items: center;
 }
-#burger-menu{
-    position: fixed;
-    top:80px;
-    left: 4%;
+#burger-menu {
+  position: fixed;
+  top: 80px;
+  left: 4%;
 }
-#burger-menu img{
-    height: 1.5rem;
-
+#burger-menu img {
+  height: 1.5rem;
 }
 
 header nav {
@@ -56,33 +53,32 @@ header nav ul li {
   margin-right: 2rem;
   display: flex;
   align-items: center;
+}
+#header-ligne-navigation__menu-to-hide {
+  display: flex;
+}
 
+#header__search {
+  display: flex;
+  align-items: center;
+  background-color: #ccc;
+  width: 500px;
+  height: 3rem;
+  border-radius: 30px;
+  justify-content: space-between;
+  padding: 0 1rem;
 }
-#header-ligne-navigation__menu-to-hide{
-    display: flex;
+#header__search div {
+  display: flex;
+  align-items: center;
 }
-
-#header__search{
-    display: flex;
-    align-items: center;
-    background-color: #ccc;
-    width: 500px;
-    height: 3rem;
-    border-radius: 30px;
-    justify-content: space-between;
-    padding: 0 1rem;
-}
-#header__search div{
-    display: flex;
-    align-items: center;
-}
-#header__search img{
-   height: 1.5rem;
+#header__search img {
+  height: 1.5rem;
 }
 header input {
-    border: none;
-    background-color: #ccc;
-    }
+  border: none;
+  background-color: #ccc;
+}
 #header__span {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -95,10 +91,8 @@ header input {
   margin-right: 1rem;
 }
 #header__span img {
-  height: 2rem;
+  height: 1.5rem;
 }
-
-
 
 #main__festival {
   background-color: #02af42;
@@ -106,8 +100,8 @@ header input {
   font-size: 3rem;
 }
 #main__festival__a {
-    display: block;
-    color: white;
+  display: block;
+  color: white;
 }
 #main__festival__a__content {
   display: flex;
@@ -124,38 +118,53 @@ header input {
   margin-top: 2rem;
 }
 
-
 @media screen and (max-width: 1300px) {
+  .global-margin,
+  hr {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    background-color: white;
+  }
 
-    .display-none, #header-ligne-navigation__menu-to-hide{        
-        display: none;
-    }
-    #burger-menu{
-        position: static;
-       
-    }
-    #burger-menu img{
-        height: 1.5rem;
-    
-    }
-    #header__search{
-        width: 2700px;
-    }
-
+  .display-none,
+  #header-ligne-navigation__menu-to-hide {
+    display: none;
+  }
+  #burger-menu {
+    position: static;
+  }
+  #burger-menu img {
+    height: 1.5rem;
+  }
+  #header__search {
+    width: 2700px;
+  }
+  #header__search input {
+    width: auto;
+  }
 }
 
 @media screen and (max-width: 682px) {
-  #header-ligne-navigation{
+  
+  #header__black-banniere {
+    justify-content: left;
+  }
+  #header__black-banniere p {
+    margin-left: 5%;
+  }
+  
+  #header-ligne-navigation {
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  #header-ligne-navigation nav{
+  #header-ligne-navigation nav {
     width: 30%;
   }
-  #header__search{
+  #header__search {
     width: 90%;
     order: 1;
     margin: auto;
     margin-top: 1.5rem;
-}
+  }
 }
